# memory_guard

./: .gitignore  CHANGELOG.es.md  CHANGELOG.md  CMakeLists.txt  DOC.en.md  DOC.es.md  README.md  build.sh  build_test.sh  clean_build.sh  modify_catch2.sh  run.sh  run_test.sh
src/: MemoryGuard.hpp  main.cpp  memory_guard.hpp  try_catch_guard.hpp
tests/: CMakeLists.txt  memory_guard_tests.cpp  try_catch_guard_tests.cpp
